# OPENNFR_E2_6.5

./: configure.ac  enigma2.bb  mytest.py  skin.py  test
lib/python/: Makefile.am  StartEnigma.py
lib/python/Components/: About.py  EpgList.py  InputDevice.py  NimManager.py  PluginList.py  SearchCovers.py  SystemInfo.py  Task.py  UsageConfig.py
lib/python/Components/Converter/: AudioServiceInfo.py  Bitrate2.py  BlinkingClockDots.py  ChannelExpertInfo.py  ChannelSelectionInfo.py  EmuInfo.py  EventName2.py  ExtendedServiceInfoNobile.py  ExtraNumText.py  ExtraNumTextNobile.py  FrontendInfo3.py  MaggyCryptInfo.py  MaggyCryptInfo.pyo  MaggyEventName.py  MaggyServiceInfo.py  MaggyServiceName.py  RefString.py  RouteInfo.py  ServiceNameOrbital.py  SkalliServiceEndTime.py  SkalliServiceStartTime.py  VFDClockToText.py  WiFiInfo2.py  g16ServiceNameEventNobile.py  iNetConnection.py  valioRefString.py  valioTunerInfo.py  valioTunerInfoBR.py
lib/python/Components/Renderer/: AnalogClockLCD.py  AnimatedPicsmap.py  CoolPico.py  EmptyEpg.py  LcdRoller.py  LcdRoller.pyo  NextEvent2.py  OMaClockLCD.py  OMaClockLcd.py  Picon2.py  PiconProv.py  PiconProvMini.py  PiconRefPS2.py  PiconX.py  RollerCharLCDLong.py  VWatches.py  Watches.py  WatchesNobile.py  Watchew.py  mvmHDDfreeTimer.py
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Screens/: About.py  ChoiceBox.py  DefaultWizard.py  HddInfo.py  HddSetup.py  Hotkey.py  InfoBarGenerics.py  LogManager.py  NetworkSetup.py  OScamInfo.py  PluginBrowser.py  Recordings.py  Standby.py  TimerEdit.py  VideoWizard.py  VirtualKeyBoard.py
(+68 files in other folders)
