installdir = $(pkglibdir)/python

SUBDIRS = Components Tools Screens Plugins

install_PYTHON = \
	upgrade.py \
	Navigation.py \ 
	NavigationInstance.py \ 
	RecordTimer.py \ 
	PowerTimer.py \ 
	ServiceReference.py \
	keyids.py \ 
	keymapparser.py \ 
	StartEnigma.py \ 
	skin.py \ 
	timer.py \ 
	GlobalActions.py \
	e2reactor.py \ 
	pyo_patcher.py \ 
	BoxBrandingTest.py
